--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "homepage": "https://dmitriy-snitko.github.io/goit-js-hw-11-color-switch",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-11-color-switch/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-11-color-switch/",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
